Fix layout for ticket menu in new ui

--- a/templates/tickets/ticket_export.haml
+++ b/templates/tickets/ticket_export.haml
@@ -3,6 +3,10 @@
 
 -block fields
 
+  .message.mb-4
+    -blocktrans trimmed
+      Any tickets opened within the selected range will be included.
+
   .flex
     .start.flex-grow
       -render_field 'start_date'
