--- a/templates/spa.haml
+++ b/templates/spa.haml
@@ -27,20 +27,8 @@
 
 
 -block page-header
-  -if title or content_menu_buttons or content_menu_links
-    .spa-title.no-menu.flex.items-center.mb-4
-      .text-container.text-2xl.text-gray-700
-        .flex.flex-row
-          -block spa-title
-            #title-text
-              {{title}}
-      .line.flex-grow.mr-2.ml-6
-        .h-0.border.border-gray-200
-      
-      -if content_menu_buttons or content_menu_links
-        -include "spa_page_menu.haml"
+  -include "spa_page_header.haml"
 
-  -block subtitle
 
 -block alert-messages
   -if user_org.is_suspended
