--- a/templates/spa_frame.haml
+++ b/templates/spa_frame.haml
@@ -619,23 +619,31 @@
       }
     }
 
-    function updatePageTitle() {
-      var spaTitle = document.querySelector(".spa-title .title-text");
-      if (spaTitle) {
-        spaTitle = spaTitle.innerText;
+    function updatePageTitle(spaTitle) {
+
+      // if were not given a title look in the page
+      if (!spaTitle) {
+        var titleDiv = document.querySelector(".spa-title #title-text");
+        if (titleDiv && titleDiv.innerText) {
+          spaTitle = titleDiv.innerText;
+        }
       }
       
+      // if we still dont have a title, ask the menu
       if (!spaTitle) {
         var menu = document.querySelector("temba-menu");
         if (menu) {
           var item = menu.getMenuItem();
-
           if (item) {
             spaTitle = item.name;
           }
         }
       }
 
+      var title = document.querySelector("#title-text");
+      if (spaTitle && title) {
+        title.innerText = spaTitle;
+      }
       document.title = spaTitle || "";
     }
 
@@ -744,8 +752,10 @@
     }
    
     function handleMenuChanged(event) {
+
       var selection = event.target.getSelection();
       var menuItem = event.target.getMenuItem();
+
       var body = document.querySelector(".spa-content");
       if (menuItem && menuItem.href) {
         var menu = document.querySelector("temba-menu");
