--- a/templates/tickets/ticket_list_spa.haml
+++ b/templates/tickets/ticket_list_spa.haml
@@ -6,6 +6,10 @@
 -block extra-style
   {{block.super}}
   :css
+    temba-select[name='ticket-status'] {
+      margin-top: 0em !important;
+    }
+
     .spa-footer {
       margin-top: -1em;
     }
