Better approach for page titles from the menu

--- a/templates/contacts/contact_list_spa.haml
+++ b/templates/contacts/contact_list_spa.haml
@@ -15,9 +15,11 @@
       padding: 0.25rem;
     }
 
--block content
-  .page-title
 
+-block spa-title
+  #title-text
+
+-block content
   .flex
     .flex-grow.self-end.items-end
       .flex.flex-col
