--- a/templates/flows/flow_list_spa.haml
+++ b/templates/flows/flow_list_spa.haml
@@ -1,14 +1,12 @@
 -extends "smartmin/list.html"
 -load smartmin sms temba compress i18n humanize
 
--block page-title
-  -trans "Flows"
-
--block page-top
+-block spa-title
+  #title-text
 
 -block content
+  // legacy requirement for bulk actions
   .page-title
-
   -if org_perms.flows.flow_update
     %temba-modax#export-results{ header:'{% trans "Download Results" %}' }
     %temba-modax#create-label-modal{ header:'{% trans "Create Label" %}', endpoint:"{% url 'flows.flowlabel_create' %}", "-temba-loaded": "handleCreateLabelModalLoaded", "-temba-submitted": "handleCreateLabelModalSubmitted"}
