Add subtitle back, whoops

--- a/templates/spa.haml
+++ b/templates/spa.haml
@@ -42,6 +42,7 @@
         .over-everything(style="z-index:9000")
           -include "spa_page_menu.haml"
 
+    -block subtitle
 
 -block alert-messages
   -if user_org.is_suspended
