--- a/templates/flows/flow_export_results.haml
+++ b/templates/flows/flow_export_results.haml
@@ -8,6 +8,8 @@
       include up to 10 contact fields and URN types whose values will also be exported with each run.
 
 -block fields
+  -render_field 'flows'
+
   .flex
     .start.flex-grow
       -render_field 'start_date'
