--- a/templates/flows/flow_export_results.haml
+++ b/templates/flows/flow_export_results.haml
@@ -17,8 +17,8 @@
     .end.flex-grow
       -render_field 'end_date'
   
+  -render_field 'with_fields'
   -render_field 'group_memberships'
-  -render_field 'contact_fields'
   -if form.fields.extra_urns
     -render_field 'extra_urns'
   -render_field 'responded_only'
