--- a/templates/flows/flow_export_results.haml
+++ b/templates/flows/flow_export_results.haml
@@ -5,7 +5,7 @@
   .mb-4
     -blocktrans trimmed
       Flow exports will include the results for each contact that has passed through the flow. You may optionally
-      include up to 10 contact fields and URN types whose values will also be exported with each run.
+      include additional columns for fields, groups and URNs for each contact.
 
 -block fields
   -render_field 'flows'
