--- a/templates/tickets/ticket_export.haml
+++ b/templates/tickets/ticket_export.haml
@@ -1,12 +1,13 @@
 -extends 'includes/modax.html'
 -load i18n smartmin
 
--block fields
-
-  .message.mb-4
+-block pre-form
+  .mb-4
     -blocktrans trimmed
-      Any tickets opened within the selected range will be included.
+      Any tickets opened within the selected date range will be included. You may optionally
+      include additional columns for fields for each contact.
 
+-block fields
   .flex
     .start.flex-grow
       -render_field 'start_date'
