Honor brand config for signup

--- a/templates/orgs/login/login.haml
+++ b/templates/orgs/login/login.haml
@@ -38,8 +38,9 @@
     .mt-6
       %input.button-primary(type="submit" value='{{_("Sign In")}}')
 
-  .mt-6
-    -blocktrans trimmed
-      Don't have an account yet?
-    %a(href="/org/signup")
-      -trans "Sign up"
+  -if brand.allow_signups
+    .mt-6
+      -blocktrans trimmed
+        Don't have an account yet?
+      %a(href="/org/signup")
+        -trans "Sign up"
