--- a/templates/includes/short_pagination.haml
+++ b/templates/includes/short_pagination.haml
@@ -2,86 +2,90 @@
 
 .paging.px-2.flex.flex-row.items-center.h-10
   .action-buttons.flex-grow
-    -block action-buttons
-      .list-buttons-container
-        .list-buttons.flex.items-center.h-full.-mx-1
+    .list-buttons-container
+      .list-buttons.flex.items-center.h-full.-mx-1
 
-          -if 'groups' in actions
-            %temba-dropdown.ml-4(offsety="8")
-              %temba-tip(position="top" text='{{_("Groups")|escapejs}}'  slot="toggle")
-                %temba-icon(name="users" clickable="true")
-              .label-menu.px-6.py-4(slot="dropdown")
-                -for group in groups
-                  -if not group.is_dynamic
-                    %li
-                      .lbl-menu(href='#' onclick='addContactToGroup({{group.pk}})' data-id='{{group.pk}}')
-                        .flex.items-center.py-1.hover-linked
-                          .glyph.message-label.label-checkbox(style="font-size:14px; color: #666")
-                          .name.px-2
-                            {{ group.label }}
-                - if org_perms.contacts.contactgroup_create
-                  - if groups
-                    %li.separator.-mx-4.border-b.my-3
+        -if 'groups' in actions
+          %temba-dropdown.ml-4(offsety="8")
+            %temba-tip(position="top" text='{{_("Groups")|escapejs}}'  slot="toggle")
+              %temba-icon(name="users" clickable="true")
+            .label-menu.px-6.py-4(slot="dropdown")
+              -for group in groups
+                -if not group.is_dynamic
                   %li
-                    .lbl-menu.add-group.hover-linked(onclick="handleAddGroupClicked()")
-                      - trans "New Group..."
+                    .lbl-menu(href='#' onclick='addContactToGroup({{group.pk}})' data-id='{{group.pk}}')
+                      .flex.items-center.py-1.hover-linked
+                        .glyph.message-label.label-checkbox(style="font-size:14px; color: #666")
+                        .name.px-2
+                          {{ group.label }}
+              - if org_perms.contacts.contactgroup_create
+                - if groups
+                  %li.separator.-mx-4.border-b.my-3
+                %li
+                  .lbl-menu.add-group.hover-linked(onclick="handleAddGroupClicked()")
+                    - trans "New Group..."
 
-          -if 'label' in actions
-            %temba-dropdown.ml-4(offsety="8")
-              %temba-tip(position="top" text='{{_("Labels")|escapejs}}'  slot="toggle")
-                %temba-icon(name="tag" clickable="true")
-              .label-menu.px-6.py-4(slot="dropdown")
-                -for label in labels_flat
-                  .lbl-menu(onclick='labelObjectRows({{label.id}}, false, refreshMenu)' data-id='{{label.id}}')
-                    .flex.items-center.py-1.hover-linked
-                      .glyph.message-label.label-checkbox
-                      .name.px-1
-                        {{ label.name }}
+        -if 'label' in actions
+          %temba-dropdown.ml-4(offsety="8")
+            %temba-tip(position="top" text='{{_("Labels")|escapejs}}'  slot="toggle")
+              %temba-icon(name="tag" clickable="true")
+            .label-menu.px-6.py-4(slot="dropdown")
+              -for label in labels_flat
+                .lbl-menu(onclick='labelObjectRows({{label.id}}, false, refreshMenu)' data-id='{{label.id}}')
+                  .flex.items-center.py-1.hover-linked
+                    .glyph.message-label.label-checkbox
+                    .name.px-1
+                      {{ label.name }}
 
-                -if org_perms.msgs.label_create
-                  -if labels_flat
-                    %li.separator.-mx-4.border-b.my-3
-                  %li
-                    .lbl-menu.add-label.linked{onclick:"handleAddLabelClicked()"}
-                      -trans "New Label..."                      
-                      
+              -if org_perms.msgs.label_create
+                -if labels_flat
+                  %li.separator.-mx-4.border-b.my-3
+                %li
+                  .lbl-menu.add-label.linked{onclick:"handleAddLabelClicked()"}
+                    -trans "New Label..."                      
+                    
 
-          -if 'restore' in actions
-            .linked.ml-4(onclick='runActionOnObjectRows("restore", refreshMenu)')
-              %temba-tip(position="top" text='{{_("Reactivate")|escapejs}}')
-                %temba-icon.show-loading(name="publish" size="1.2" clickable="true")
-  
-          -if 'archive' in actions
-            .linked.ml-4(onclick='runActionOnObjectRows("archive", refreshMenu)')
-              %temba-tip(position="top" text='{{_("Archive")|escapejs}}')
-                %temba-icon.show-loading(name="archive" clickable="true")
+        -if 'restore' in actions
+          .linked.ml-4(onclick='runActionOnObjectRows("restore", refreshMenu)')
+            %temba-tip(position="top" text='{{_("Reactivate")|escapejs}}')
+              %temba-icon.show-loading(name="publish" size="1.2" clickable="true")
 
-          -if 'send' in actions
-            -if org_perms.msgs.broadcast_send and not reply_disabled
-              %temba-modax#send-message-modal(header='{{_("Send Message")|escapejs}}' endpoint="{% url 'msgs.broadcast_send' %}")
-                .linked.ml-4(onclick='handleSendMessageClicked()')
-                  %temba-tip(position="top" text='{{_("Send Message")|escapejs}}')
-                    %temba-icon(name="message-square" clickable="true")
-      
-          -if 'delete' in actions
-            .linked.ml-4(onclick='onDeleteClicked()')
-              %temba-tip(position="top" text='{{_("Delete")|escapejs}}')
-                %temba-icon(name="trash-2" clickable="true")
+        -if 'archive' in actions
+          .linked.ml-4(onclick='runActionOnObjectRows("archive", refreshMenu)')
+            %temba-tip(position="top" text='{{_("Archive")|escapejs}}')
+              %temba-icon.show-loading(name="archive" clickable="true")
 
-          -if 'unlabel' in actions
-            .linked.ml-4(onclick="unlabelObjectRows({{current_group.pk}}, false, refreshMenu);")
-              %temba-tip(position="top" text='{{_("Remove from group")|escapejs}}')
-                %temba-icon.show-loading(name="x" clickable="true")
+        -if 'send' in actions
+          -if org_perms.msgs.broadcast_send and not reply_disabled
+            %temba-modax#send-message-modal(header='{{_("Send Message")|escapejs}}' endpoint="{% url 'msgs.broadcast_send' %}")
+              .linked.ml-4(onclick='handleSendMessageClicked()')
+                %temba-tip(position="top" text='{{_("Send Message")|escapejs}}')
+                  %temba-icon(name="message-square" clickable="true")
+    
+        -if 'delete' in actions
+          .linked.ml-4(onclick='onDeleteClicked()')
+            %temba-tip(position="top" text='{{_("Delete")|escapejs}}')
+              %temba-icon(name="trash-2" clickable="true")
 
-          -if 'block' in actions
-            .linked.ml-4(onclick='runActionOnObjectRows("block", refreshMenu)')
-              %temba-tip(position="top" text='{{_("Block")|escapejs}}')
-                %temba-icon.show-loading(name="slash" clickable="true")
+        -if 'unlabel' in actions
+          .linked.ml-4(onclick="unlabelObjectRows({{current_group.pk}}, false, refreshMenu);")
+            %temba-tip(position="top" text='{{_("Remove from group")|escapejs}}')
+              %temba-icon.show-loading(name="x" clickable="true")
 
-          -if org_perms.flows.flow_broadcast
-            .linked.ml-4(onclick='handleStartFlowClicked(event)')
-              %temba-tip(position="top" text='{{_("Start Flow")|escapejs}}')
-                %temba-icon.show-loading(name="flow" clickable="true")
+        -if 'block' in actions
+          .linked.ml-4(onclick='runActionOnObjectRows("block", refreshMenu)')
+            %temba-tip(position="top" text='{{_("Block")|escapejs}}')
+              %temba-icon.show-loading(name="slash" clickable="true")
+
+        -if 'start-flow' in actions and org_perms.flows.flow_broadcast
+          .linked.ml-4(onclick='handleStartFlowClicked(event)')
+            %temba-tip(position="top" text='{{_("Start Flow")|escapejs}}')
+              %temba-icon.show-loading(name="flow" clickable="true")
+
+        -if 'download-results' in actions
+          .linked.ml-4(onclick='handleDownloadFlowResults(event)')
+            %temba-tip(position="top" text='{{_("Download Results")|escapejs}}')
+              %temba-icon.show-loading(name="download" clickable="true")
 
   .paging-range.mr-4
     -blocktrans trimmed with start=page_obj.start_index|intcomma end=page_obj.end_index|intcomma total=paginator.count|intcomma
