deactivate scheduled message updates
- temporarily added todos for updating scheduled (messages) system label total in left nav side bar
- minor updates to scheduled message delete/deactivate, view, template, and tests

--- a/templates/msgs/broadcast_scheduled_deactivate.haml
+++ b/templates/msgs/broadcast_scheduled_deactivate.haml
@@ -6,7 +6,7 @@
     -blocktrans trimmed
       You are about to delete
       %span.font-normal
-        Scheduled Message "{{display_text}}".
+        Scheduled Message "{{object_name}}".
       There is no way to undo this. Are you sure?
     
   -block delete-form
