Small styling tweaks for api docs

--- a/templates/api/v2/api_explorer.haml
+++ b/templates/api/v2/api_explorer.haml
@@ -164,6 +164,10 @@
 -block extra-style
   {{ block.super }}
   :css
+    .content-card {
+      width: 80%;
+    }
+
     .breadcrumb {
       display: flex;
       flex-wrap: wrap;
