--- a/templates/api/v2/api_root.html
+++ b/templates/api/v2/api_root.html
@@ -12,6 +12,25 @@
     <link rel="stylesheet" type="text/css" href='{% static "css/codemirror.css" %}'/>
 
  <style>
+
+    .content-card {
+      width: 80%;
+    }
+
+    .content-main li {
+        margin: 0.4em 0em;
+    }
+
+    .content-main ul {
+        margin-top: 1em;
+        margin-bottom: 1em;
+    }
+
+    code {
+        padding:0.2em 0.5em;
+        font-size: 0.9em;
+    }
+
     .card {
       padding: 0;
       margin: 1em 2em;
