updates based on PR review
- updated permission, template, test, and view to refer to 'delete' vs. 'deactivate'
- removed superfluous comment

--- a/templates/msgs/broadcast_scheduled_delete.haml
+++ b/templates/msgs/broadcast_scheduled_delete.haml
@@ -4,9 +4,9 @@
 -block modal
   -block delete-message
     -blocktrans trimmed
-      You are about to delete
+      You are about to delete this
       %span.font-normal
-        Scheduled Message "{{object_name}}".
+        Scheduled Message.
       There is no way to undo this. Are you sure?
     
   -block delete-form
