--- a/templates/msgs/broadcast_scheduled_delete.haml
+++ b/templates/msgs/broadcast_scheduled_delete.haml
@@ -4,10 +4,7 @@
 -block modal
   -block delete-message
     -blocktrans trimmed
-      You are about to delete this
-      %span.font-normal
-        Scheduled Message.
-      There is no way to undo this. Are you sure?
+      You are about to delete this scheduled message. There is no way to undo this. Are you sure?
     
   -block delete-form
     %form(method="post")
