--- a/templates/channels/channel_read.haml
+++ b/templates/channels/channel_read.haml
@@ -238,7 +238,7 @@
                     {{ channel.get_error_log_count|intcomma }}
                 %td.w-0.text-right
                   .inline-block
-                    %temba-icon(onclick="goto(event, this)" clickable="true" name="log" href='{% url "channels.channellog_list" channel.uuid %}?others=1')
+                    %temba-icon(onclick="goto(event, this)" clickable="true" name="{{Icon.Log}}" href='{% url "channels.channellog_list" channel.uuid %}?others=1')
 
 
       .card.pt-8.flex-shrink-0
