--- a/templates/contacts/contact_read.haml
+++ b/templates/contacts/contact_read.haml
@@ -24,22 +24,22 @@
 
     -if contact.status == 'B'
       .lbl-group.linked.inverted.bg-secondary.mr-2.mb-2(onclick="goto(event)" href="{% url 'contacts.contact_blocked' %}")
-        %temba-icon(name="{{Icon.ContactBlocked}}")
+        %temba-icon(name="{{Icon.contact_bocked}}")
         -trans "Blocked"
   
     -elif contact.status == 'S'
       .lbl-group.linked.inverted.bg-secondary.mr-2.mb-2(onclick="goto(event)" href="{% url 'contacts.contact_stopped' %}")
-        %temba-icon(name="{{Icon.ContactStopped}}")
+        %temba-icon(name="{{Icon.contact_stopped}}")
         -trans "Stopped"
 
     -elif contact.status == 'V'
       .lbl-group.linked.inverted.bg-secondary.mr-2.mb-2(onclick="goto(event)" href="{% url 'contacts.contact_archived' %}")
-        %temba-icon(name="{{Icon.Archive}}")
+        %temba-icon(name="{{Icon.archive}}")
         -trans "Archived"
 
     -if contact.current_flow
       .lbl-group.linked.inverted.bg-tertiary.mr-2.mb-2(onclick="goto(event)" href="{% url 'flows.flow_editor' contact.current_flow.uuid %}")
-        %temba-icon(name="{{Icon.Flow}}")
+        %temba-icon(name="{{Icon.flow}}")
         {{ contact.current_flow.name }}
 
     -for group in contact_groups
