--- a/templates/contacts/contact_update.haml
+++ b/templates/contacts/contact_update.haml
@@ -59,7 +59,7 @@
         // add a link to increase the priority
         if (!first) {
           var link = 'javascript:moveUp("' + this.id + '");';
-          link = "<temba-icon class='order-helper' name='{{Icon.Up}}' onclick='" + link + "'/>"
+          link = "<temba-icon class='order-helper' name='{{Icon.up}}' onclick='" + link + "'/>"
           $(this).parents('.control-group').prepend(link);
         }
 
