--- a/templates/contacts/contactfield_list_spa.haml
+++ b/templates/contacts/contactfield_list_spa.haml
@@ -77,7 +77,7 @@
                     %td.w-10
                       -if org_perms.contacts.contactfield_delete
                         .pl-2.pt-1.delete-link.linked.text-gray-400(style="visibility:hidden" onclick='showFieldDeleteModal("{{ obj.uuid }}")')
-                          %temba-icon(name="{{Icon.DeleteSmall}}")                          
+                          %temba-icon(name="{{Icon.delete_small}}")                          
                 - empty
                   %tr.empty_list
                     %td{ colspan:'99' }
