--- a/templates/includes/recipients_contact.haml
+++ b/templates/includes/recipients_contact.haml
@@ -2,10 +2,10 @@
 
 -if contact.is_active
   .lbl-group.linked.mr-2.mb-2(onclick="goto(event)" href="{% url 'contacts.contact_read' contact.uuid %}")
-    %temba-icon(name="{{Icon.Contact}}")
+    %temba-icon(name="{{Icon.contact}}")
     {{ contact|name_or_urn:user_org }}
 -else
   .lbl-group.mr-2.mb-2
-    %temba-icon(name="{{Icon.Contact}}")
+    %temba-icon(name="{{Icon.contact}}")
     .line-through
       -trans "Deleted"
