--- a/templates/flows/flow_list.haml
+++ b/templates/flows/flow_list.haml
@@ -73,7 +73,7 @@
                   -if not label.children
                     .lp-nav-item{ class:'{% if current_label.pk == label.pk %}font-normal{% endif %}' }
                       .name{onclick:"goto(event)", href:"{% url 'flows.flow_filter' label.uuid %}", class:'{% if current_label.pk == label.pk %}font-normal active{% endif %}' }
-                        {{ label.label }}
+                        {{ label.name }}
                       .count{onclick:"goto(event)", href:"{% url 'flows.flow_filter' label.uuid %}", class:'{% if current_label.pk == label.pk %}font-normal active{% endif %}' }
                         {{ label.count | intcomma }}
 
