Add endpoint for omnibox with just contacts

--- a/templates/flows/flow_editor.haml
+++ b/templates/flows/flow_editor.haml
@@ -264,6 +264,7 @@
         environment: base + 'environment',
         activity: '/flow/activity/{{object.uuid}}/',
         recipients: '/contact/omnibox?v=2&types=gc',
+        contacts: '/contact/omnibox?v=2&types=c',
         contact: '/contact/read/',
 
         {% if can_simulate %}
