--- a/templates/flows/flow_list.haml
+++ b/templates/flows/flow_list.haml
@@ -95,32 +95,11 @@
 
                         %ul.dropdown-menu.label-menu.rounded-lg.border-none.px-4.py-3
                           -for label in labels
-                            -with label.children as children
-                              -if children
-                                %li.dropdown-submenu
-                                  .lbl-menu.object-btn-label{data-id:'{{label.pk}}'}
-                                    .flex.items-center.py-1.linked
-                                      .glyph.message-label
-                                      .name
-                                        = label.label
-                                      .flex-grow.text-right
-                                        .icon-arrow-right-8.text-2xl.-mt-1
-
-                                  %ul.dropdown-menu.label-menu.rounded-lg.border-none.px-4.py-3
-                                    -for child in children
-                                      %li
-                                        .lbl-menu.object-btn-label{data-id:'{{child.pk}}'}
-                                          .flex.items-center.py-1.linked
-                                            .glyph.message-label
-                                            = child.name
-
-                          -for label in labels
-                            -if not label.children
-                              %li
-                                .lbl-menu.object-btn-label{data-id:'{{label.pk}}'}
-                                  .flex.items-center.py-1.linked
-                                    .glyph.message-label
-                                    = label.label
+                            %li
+                              .lbl-menu.object-btn-label{data-id:'{{label.pk}}'}
+                                .flex.items-center.py-1.linked
+                                  .glyph.message-label
+                                  = label.name
 
                           -if org_perms.flows.flowlabel_create
                             -if labels
