--- a/templates/contacts/contact_read_spa.haml
+++ b/templates/contacts/contact_read_spa.haml
@@ -49,21 +49,26 @@
 
       var store = document.querySelector("temba-store");
       
-      var pinned = document.querySelector(".pinned-fields");
+      var featured = document.querySelector(".featured-fields");
       var all = document.querySelector(".all-fields");
 
-      var pinnedCount = store.getPinnedFields().length;
+      var featuredCount = store.getFeaturedFields().length;
       var fieldCount = Object.keys(contact.fields).length;
       
-      // pinned.classList.toggle("hidden", pinnedCount == 0);
-      all.classList.toggle("hidden", pinnedCount > 0 && fieldCount-pinnedCount === 0);
+      if (all) {
+        all.classList.toggle("hidden", featuredCount > 0 && fieldCount-featuredCount === 0);
+      }
 
       // if our contact refreshes, refresh our pendingEvents
       var pending = document.querySelector("temba-contact-pending");
-      pending.refresh();
+      if (pending) {
+        pending.refresh();
+      }
 
       var menu = document.querySelector("temba-menu");
-      menu.refresh();
+      if (menu) {
+        menu.refresh();
+      }
     }
 
     function handleTicketsRefreshed(evt) {
@@ -103,7 +108,7 @@
 
     %temba-tab(icon="icon.fields" name='{{_("Fields")|escapejs}}')
       .flex.flex-grow.flex-col.p-4.overflow-y-auto(style="border-top-right-radius: var(--curvature);")
-        %temba-contact-fields.pinned-fields.pb-4(timezone="{{object.org.timezone}}" contact="{{object.uuid}}" pinned="true" -temba-button-clicked="handleFieldSearch")
+        %temba-contact-fields.featured-fields.pb-4(timezone="{{object.org.timezone}}" contact="{{object.uuid}}" featured="true" -temba-button-clicked="handleFieldSearch")
         %temba-contact-fields.all-fields(timezone="{{object.org.timezone}}" contact="{{object.uuid}}" -temba-button-clicked="handleFieldSearch")
           .no-fields.p-16.text-center(slot="empty")
             .text-xl.mb-4
